fix(rebase): add back sources
